--- a/dotenv_codegen_impl/Cargo.toml
+++ b/dotenv_codegen_impl/Cargo.toml
@@ -15,8 +15,8 @@ authors = [
 readme = "../README.md"
 keywords = ["environment", "env", "dotenv", "settings", "config"]
 license = "MIT"
-homepage = "https://github.com/purpliminal/rust-dotenv"
-repository = "https://github.com/purpliminal/rust-dotenv"
+homepage = "https://github.com/dotenv-rs/dotenv"
+repository = "https://github.com/dotenv-rs/dotenv"
 description = "A `dotenv` implementation for Rust"
 
 
